--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <title>EightTrack</title>
     <script src="https://kit.fontawesome.com/f46d382013.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/rmk0kxb.css">
   </head>
