upgrade insecure request line added to html

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>EightTrack</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script src="https://kit.fontawesome.com/f46d382013.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/rmk0kxb.css">
   </head>
