--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="EightTrack" />
+    <meta property="og:image" content="player-waveform.png" />
+    <meta
+      property="og:description"
+      content="A SoundCloud clone that allows you to upload and listen to music, make comments on the music, and create playlists."
+    />
+    <meta
+      property="og:url"
+      content="https://eight-track-app.herokuapp.com"
+    />
     <title>EightTrack</title>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script src="https://kit.fontawesome.com/f46d382013.js" crossorigin="anonymous"></script>
