switch thumbnail image to aws url

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta property="og:title" content="EightTrack" />
-    <meta property="og:image" content="player-waveform.png" />
+    <meta name="image" property="og:image" content="https://eta-photobucket.s3.amazonaws.com/player-waveform.png" />
     <meta
       property="og:description"
       content="A SoundCloud clone that allows you to upload and listen to music, make comments on the music, and create playlists."
