add errorhandler route to prevent issue with refreshing page causing 404

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta property="og:title" content="EightTrack" />
-    <meta name="image" property="og:image" content="https://eta-photobucket.s3.amazonaws.com/player-waveform.png" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://eta-photobucket.s3.amazonaws.com/player-waveform.png"
+    />
     <meta
       property="og:description"
       content="A SoundCloud clone that allows you to upload and listen to music, make comments on the music, and create playlists."
     />
-    <meta
-      property="og:url"
-      content="https://eight-track-app.herokuapp.com"
-    />
+    <meta property="og:url" content="https://eight-track.onrender.com" />
     <title>EightTrack</title>
-    <script src="https://kit.fontawesome.com/f46d382013.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.typekit.net/rmk0kxb.css">
+    <script
+      src="https://kit.fontawesome.com/f46d382013.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="https://use.typekit.net/rmk0kxb.css" />
   </head>
   <body>
     <div id="root"></div>
